test: STT 시각 테스트 호환성 보강